# rust_embassy_microbit_project

./: .gitattributes  README.md  gdb-client.sh  gdb-server.sh  generate_data.sh  hacking_embedded_rust_microbit.md  reverse_engineering_analysis.md
data/: all_headers.txt  analysis_report.txt  disassembly_full.txt  disassembly_with_source.txt  firmware.hex  firmware.srec  section_headers.txt  symbols_by_size.txt  symbols_data.txt  symbols_defined.txt  symbols_functions.txt  symbols_global.txt
examples/display/: Cargo.toml
examples/display/src/: board.rs  button.rs  display.rs  fonts.rs  main.rs  types.rs
src/: lib.rs
